# aws-minecraft

./: .gitignore  README.md  Vagrantfile  minecraft.yaml  requirements.yaml
ansible/: Vagrantfile  pyproject.toml  run.sh
terraform/: network.tf  output.tf  providers.tf  server.tf  terraform.tfvars.example  variables.tf
