[tool.poetry]
name = "minecraft"
version = "0.1.0"
description = ""
authors = ["Robert Smieja <robertsmieja@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9.7"

[tool.poetry.dev-dependencies]
ansible-lint = "^4.2.0"
jinja2 = "^2.11.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
